syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "Fretes";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service FretesService {

  rpc calculaFrete(FreteRequest) returns (FreteResponse){}

}

message ErrorDetails {
  int32 code = 1;
  string message = 2;
}

message FreteRequest {
  string cep = 1;
}

message FreteResponse {
  double valor = 1;
  string cep = 2;

}